maps milestone, now with regions with aggregation totals

--- a/sites/configurations/volunteerscotland-search/templates/opportunities/map.hbs
+++ b/sites/configurations/volunteerscotland-search/templates/opportunities/map.hbs
@@ -22,7 +22,7 @@
   </div>
   <div id="detailed-results-container" class="container-content container-map">
     <div id="map-full" data-map-name="fullMap" data-map-clustered-options='{
-    "query" : {{jsStringify @root.request.params.query}}, "queryUrl" : "map_data"}'>
+    "query" : {{jsStringify @root.request.params.query}}, "queryUrl" : "map_data", "aggregationKey" : "admin_district"}'>
     </div>
   </div>
 </div>
