--- a/sites/configurations/scvo/partials/sector-stats.hbs
+++ b/sites/configurations/scvo/partials/sector-stats.hbs
@@ -47,7 +47,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <span class="fal fa-fw fa-chart-line fa-5x"> </span>
           <p>
-            <strong>£5.9billion annual turnover in 2017</strong>
+            <strong>Scotland’s third sector has over 100,000 paid staff</strong>
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
