Added toolkit link to digiparticipation

--- a/sites/configurations/digitalparticipation/templates/skill-up.hbs
+++ b/sites/configurations/digitalparticipation/templates/skill-up.hbs
@@ -9,6 +9,12 @@
         skills is a handy tool to kickstart your thinking on how you might
         begin to put your digital charter pledges into action.
       </p>
+      <h4>
+        <a href="https://storage.googleapis.com/scvo-cms/scvo-cms/wp-content/uploads/2018/09/EDS-Toolkit.pdf">
+          Download our Essential Digital Skills Toolkit
+          <i class="material-icons">arrow_forward</i>
+        </a>
+      </h4>
       <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="The Essentials illustration" class="responsive-img hide-on-med-and-up" />
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet">
