--- a/sites/configurations/digitalparticipation/templates/sign-up.hbs
+++ b/sites/configurations/digitalparticipation/templates/sign-up.hbs
@@ -49,7 +49,7 @@
   </div>
   <div class="mdc-layout-grid__inner description">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell-4-phone">
-      <a href="/sign-up/form" class="mdc-button mdc-button--raised">Okay, let's get started</a>
+      <a href="/sign-up/start" class="mdc-button mdc-button--raised">Okay, let's get started</a>
       <hr />
     </div>
   </div>
