Footer updates including gathering sponsors

--- a/sites/configurations/scvo/partials/footer-gathering.hbs
+++ b/sites/configurations/scvo/partials/footer-gathering.hbs
@@ -1,24 +1,38 @@
 <div class="footer-text sponsors">
   <div class="container-fluid">
+    <hr />
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <hr />
-          <h3>
-            Media partner
-          </h3>
-          <p>
-            <a href="http://thirdforcenews.org.uk"><img src="http://cms.scvo.org/wp-content/uploads/2018/09/SrccNv5o_400x400.png" width="80" height="80" /></a>
-          </p>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <h3>
             Our sponsors
           </h3>
           <p>
-            <a href="/the-gathering-2019/sponsorship"><img src="http://cms.scvo.org/wp-content/uploads/2018/09/G2018-CM-sponsor-buttons.png" class="responsive" /></a>
+            <a href="https://www.ccla.co.uk" style="float:left;margin-right:8px;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/ccla.png" height="75" /></a>
+            <a href="/the-gathering-2019/sponsorship" style="float:left;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/G2018-CM-sponsor-buttons.png" height="73" /></a>
+            <!-- width:400px;overflow:hidden; -->
           </p>
-          <br />
+        </div>
+      </div>
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          <h3>
+            Our supporters
+          </h3>
+          <p>
+            <a href="https://glasgowconventionbureau.com" style="float:left;"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/glasgow-convention-bureau-logo-black.png" height="75" /></a>
+          </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          <h3>
+            Media partner
+          </h3>
+          <p>
+            <a href="http://thirdforcenews.org.uk"><img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/gathering/tfn.png" width="80" height="80" /></a>
+          </p>
         </div>
       </div>
     </div>
+    <br />
   </div>
 </div>
