--- a/sites/configurations/scvo/partials/footer-services.hbs
+++ b/sites/configurations/scvo/partials/footer-services.hbs
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <h2>
             Office space
           </h2>
@@ -11,7 +11,7 @@
           </p>
           <a href="/services/office-space" class="mdc-button mdc-button--raised">Join our hub</a>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <h2>
             Payroll service
           </h2>
@@ -20,7 +20,7 @@
           </p>
           <a href="/services/payroll" class="mdc-button mdc-button--raised">Find out more</a>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <h2>
             SCVO membership
           </h2>
