--- a/sites/configurations/scvo/partials/footer-credit-union.hbs
+++ b/sites/configurations/scvo/partials/footer-credit-union.hbs
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <h2 style="text-align:left;">
             Contact SCVO Credit Union
           </h2>
@@ -19,7 +19,7 @@
             </li>
           </ul>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
           <h2 style="text-align:left;">
             Office opening hours
           </h2>
