--- a/sites/configurations/scvo/partials/footer-join-our-hub.hbs
+++ b/sites/configurations/scvo/partials/footer-join-our-hub.hbs
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <h2>
             Affordable and flexible office space for third sector organisations
           </h2>
