--- a/sites/configurations/volunteerscotland-search/templates/opportunities/map.hbs
+++ b/sites/configurations/volunteerscotland-search/templates/opportunities/map.hbs
@@ -1,5 +1,5 @@
-<div id="detailed-results-container" class="container-content container-map">
-  <div class="mdc-layout-grid head">
+<div id="detailed-results-container" class="container-content content-primary-search container-map">
+  <div class="mdc-layout-grid head h-padding-full v-margin-full">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <div class="h-padding-full">
@@ -11,12 +11,10 @@
     </div>
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone action">
-        <div class="h-padding-full v-margin-full">
-          {{#>components_tab_bar}}
-            {{>components_tab url=(concat "/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/search")}}
-            {{>components_tab url=(concat "/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/map")}}
-          {{/components_tab_bar}}
-        </div>
+        {{#>components_tab_bar}}
+          {{>components_tab url=(concat "/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/search")}}
+          {{>components_tab url=(concat "/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/map")}}
+        {{/components_tab_bar}}
       </div>
     </div>
   </div>
