Fixed email template

--- a/sites/configurations/emailer/emails/goodmoves-saved-searches.mjml
+++ b/sites/configurations/emailer/emails/goodmoves-saved-searches.mjml
@@ -13,7 +13,7 @@
             <mj-column padding="0px">
               <mj-text font-size="16px" padding="0px" color="#000000" font-family="Montserrat, Helvetica, Arial, sans-serif">
                 <p>
-                  <strong>{{inflect hits.total "job" "jobs" true}}</strong> matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "x") "Do \o\f MMMM"}}.
+                  <strong>{{inflect hits.total "job" "jobs" true}}</strong> matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment ../subscription.lastSent "") "Do \o\f MMMM"}}.
                 </p>
               </mj-text>
             </mj-column>
