--- a/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
+++ b/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
@@ -226,7 +226,7 @@
                                           <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                             <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
                                               <p>
-                                                <strong>{{inflect hits.total "job" "jobs" true}}</strong> matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "x") "Do \o\f MMMM"}}. </p>
+                                                <strong>{{inflect hits.total "job" "jobs" true}}</strong> matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment ../subscription.lastSent "") "Do \o\f MMMM"}}. </p>
                                             </div>
                                           </td>
                                         </tr>
