Fixed closing soon template

--- a/sites/configurations/emailer/emails/goodmoves-shortlist.mjml
+++ b/sites/configurations/emailer/emails/goodmoves-shortlist.mjml
@@ -13,7 +13,7 @@
             <mj-column padding="0px">
               <mj-text font-size="16px" padding="0px" color="#000000" font-family="Montserrat, Helvetica, Arial, sans-serif">
                 <p>
-                  <strong>{{inflect hits.total "job" "jobs" true}}</strong> closing in 3 days.
+                  <strong>{{inflect hits.total "job" "jobs" true}}</strong> in your shortlist will close on the {{momentFormat (dateMath "now+3d/d") "Do \o\f MMMM"}}.
                 </p>
               </mj-text>
             </mj-column>
