--- a/sites/configurations/emailer/partials/bodies/goodmoves-shortlist.html
+++ b/sites/configurations/emailer/partials/bodies/goodmoves-shortlist.html
@@ -226,7 +226,7 @@
                                           <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                             <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
                                               <p>
-                                                <strong>{{inflect hits.total "job" "jobs" true}}</strong> closing in 3 days. </p>
+                                                <strong>{{inflect hits.total "job" "jobs" true}}</strong> in your shortlist will close on the {{momentFormat (dateMath "now+3d/d") "Do \o\f MMMM"}}. </p>
                                             </div>
                                           </td>
                                         </tr>
