Updated footer link

--- a/sites/configurations/emailer/emails/goodmoves-shortlist.mjml
+++ b/sites/configurations/emailer/emails/goodmoves-shortlist.mjml
@@ -65,7 +65,7 @@
         <mj-column padding="10px">
           <mj-text font-size="16px" color="#ffffff" font-family="Montserrat, helvetica, Arial, sans-serif" padding="0px">
             <p style="margin:0px;">
-              <a href="https://goodmoves.com/searches" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">Change your alert preferences</a> or <a href="%unsubscribe_url%" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">unsubscribe</a>
+              <a href="https://goodmoves.com/shortlist" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">Change your alert preferences</a> or <a href="%unsubscribe_url%" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">unsubscribe</a>
             </p>
           </mj-text>
         </mj-column>
