--- a/sites/configurations/emailer/partials/bodies/goodmoves-shortlist.html
+++ b/sites/configurations/emailer/partials/bodies/goodmoves-shortlist.html
@@ -505,7 +505,7 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#ffffff;">
                                           <p style="margin:0px;">
-                                            <a href="https://goodmoves.com/searches" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">Change your alert preferences</a> or <a href="%unsubscribe_url%" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">unsubscribe</a>
+                                            <a href="https://goodmoves.com/shortlist" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">Change your alert preferences</a> or <a href="%unsubscribe_url%" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">unsubscribe</a>
                                           </p>
                                         </div>
                                       </td>
