debugging and optimisation for the two new pick-list search fields

--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -131,7 +131,7 @@
       </div>
     </div>
 
-    {{#each (split "work_types,client_groups,availability,services,age_groups,support_options" ",") ~}}
+    {{#each (split "work_types,client_groups,services,age_groups" ",") ~}}
       {{> term_filter type=this instance_id=instance_id ~}}
     {{/each ~}}
 
