--- a/sites/configurations/scvo/templates/pages/page-digital-evolution-checkup-results.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital-evolution-checkup-results.hbs
@@ -363,7 +363,7 @@ function RadarChart(id, data, options) {
     ],[//Your scores
       {
         axis:"Overall",
-        value:{{> to_percentage score=@root.request.params.query.s1 lower=-4 upper=20}}/100
+        value:{{> to_percentage score=@root.request.params.query.overall lower=-18 upper=138}}/100
       },
       {
         axis:"Leadership, Culture and Skills",
