--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -1,15 +1,15 @@
 {{#*inline "term_filter"}}
-<h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{type}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
+<h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{type}}-collapse" data-collapse-inverse="#{{../instance_id}}-{{type}}-list" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
   {{#compare type "===" "regions" ~}}
     Region
   {{else}}
     {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}
   {{/compare ~}}
   <span class="mdc-icon-toggle pull-right">
-    <i class="far {{#if (getProperty @root.request.params.query type)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
+    <i class="far fa-chevron-down" aria-hidden="true"></i>
   </span>
 </h3>
-<div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{type}}-collapse"{{#unless (getProperty @root.request.params.query type)}} style="display: none;"{{/unless}}>
+<div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{type}}-collapse" style="display: none;">
   {{#compare type "===" "regions" ~}}
     {{#if (any @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ~}}
       {{#each @root.data.opportunitySupplimentary.types.aggregations.countries.buckets ~}}
@@ -46,6 +46,13 @@
     {{/each ~}}
   {{/compare ~}}
 </div>
+{{#compare type "!==" regions ~}}
+  <div id="{{../instance_id}}-{{type}}-list">
+  <ul id="{{../instance_id}}-{{type}}-list-ul">
+    I'm a list!
+  </ul>
+  </div>
+{{/compare}}
 {{/inline}}
 {{#*inline "term_checkbox"}}
   <div class="mdc-form-field">
