fixing availability values to true

--- a/sites/configurations/volunteerscotland-search/partials/opportunity/timings-selector.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity/timings-selector.hbs
@@ -17,7 +17,7 @@
           <td style="text-align:center;font-weight:bold;">
             <div class="mdc-checkbox">
               <input type="checkbox" name="{{@key}}"
-                     class="mdc-checkbox__native-control"
+                     class="mdc-checkbox__native-control" value="true"
                      {{#if this}}checked{{/if}}>
               <div class="mdc-checkbox__background">
                 <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
